# disni-reflex

./: README.md  pom.xml
libdisni/: configure.ac
libdisni/src/: Makefile.am  Makefile.in
libdisni/src/affinity/.deps/: com_ibm_disni_util_NativeAffinity.Plo
libdisni/src/nvmef/: .com_ibm_disni_nvmef_spdk_NativeDispatcher.cpp.swp
libdisni/src/reflex/: Makefile.am  com_ibm_disni_reflex_NativeDispatcher.cpp  com_ibm_disni_reflex_NativeDispatcher.h
libdisni/src/reflex/.deps/: com_ibm_disni_reflex_NativeDispatcher.Plo
libdisni/src/verbs/.deps/: com_ibm_disni_rdma_verbs_impl_NativeDispatcher.Plo
libreflex/: Makefile.am  configure.ac
libreflex/src/: stanford_mast_reflex_NativeDispatcher.cpp  stanford_mast_reflex_NativeDispatcher.h
src/main/java/com/ibm/disni/nvmef/: .NvmeCommand.java.swp
src/main/java/com/ibm/disni/nvmef/spdk/: .IOCompletion.java.swp  .NvmeController.java.swp  .NvmeControllerOptions.java.swp  .NvmeNamespace.java.swp  .NvmeQueuePair.java.swp
src/main/java/com/ibm/disni/reflex/: IOCompletion.java  NativeDispatcher.java  PendingOperationException.java  ReFlexCommand.java  ReFlexEndpoint.java  ReFlexEndpointGroup.java  ReFlexSetup.java
src/main/java/stanford/mast/reflex/: NativeDispatcher.java  ReFlexEndpoint.java
src/test/java/com/ibm/disni/benchmarks/: ReFlexClientBenchmark.java  ReFlexEndpointClient.java
